Fix the css issues making the projects hard to view. Added more spacing between div. change text color of welcome message

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -54,7 +54,8 @@
 .center-content {
   align-items: center;
   justify-content: center;
-  background: linear-gradient(#bf9aca,#eda2c0 ); 
+  background: linear-gradient(#bf9aca,#c7e8f3 ); 
+  margin-bottom: 2em;
 
 }
 .nav-pills {
@@ -85,6 +86,7 @@
 background-size: 100% 3px;
 background-position: 0% 0%, 0% 100%;
 background-repeat: no-repeat;
+color: #c7e8f3;
 
   
 }
@@ -92,15 +94,44 @@ background-repeat: no-repeat;
   margin-bottom: 2em;
   margin-top: 1em;
 }
-/* .card-text {
-  background: linear-gradient(#8e4162,#41393E )
+.card-text {
+  background: transparent;
+  margin-left: 1em ;
 
-} */
+}
 
+
+.card-text, #project-title {
+  color: aliceblue;
+}
+.card-shadow, .center-items, #project-title {
+  background-color: #bf9aca;
+  color: #41393E;
+}
+.card-subtitle {
+  color: #41393E;
+  background: transparent;
+}
 .card-body {
   border-style: solid;
   border-width: .8em;
-  background: linear-gradient(#41393E, #8e4162, #eda2c0 )
+  background: linear-gradient(#eda2c0, #8e4162, #41393E )
+  
+}
+.mb-2 text-muted card-subtitle h6 {
+  color: black;
+}
+#controlled-tab-example-tab-Global, #controlled-tab-example-tab-friends, #controlled-tab-example-tab-mine,
+#controlled-tab-example-tab-shared, #controlled-tab-example-tab-search {
+  background: transparent;
+}
+
+.btn {
+  background-color: #eda2c0 !important;
+  
+}
+button {
+  color: #41393E !important;
 }
 .grow {
   flex-grow: 1
